--- a/code/index.html
+++ b/code/index.html
@@ -15,14 +15,13 @@
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
         <h1>Mortality from Chronic Diseases in the US</h1>
-        <p>PARAGRPH TEXT ROW<br>
-        ANOTHER TEXT ROW HERE</p>
+        <p>from 2010-2020</p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-2">
         <div class="well">
-          <h5>Mortality Categories by State:</h5>
+          <h5>View Data by State:</h5>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
         <div class="col-md-5">
@@ -30,7 +29,7 @@
         </div>
       </div>
       <div class="col-md-5">
-        <div id="line"></div>
+        <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
       </div>
     </div>
     <div class="row">
@@ -48,6 +47,7 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="PLOT.JS HTTPS"></script>
   <script src="APP.JS FILE PATH"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 
 </body>
 
